--- a/watermark/css/dev/app.css
+++ b/watermark/css/dev/app.css
@@ -71,7 +71,7 @@ h6 {
 @font-face { 
 	font-family: "iconfont"; 
 	font-display: swap;
-	src: url("../assets/fonts/iconfont.woff2?ca6f800e5ed65ded00335d291cbefdec") format("woff2"); 
+	src: url("../assets/fonts/iconfont.woff2?667ba53444cefffad070e90538a84ad2") format("woff2"); 
 } 
 [class*="--icon-"]::before{
 	font-family: iconfont; 
@@ -133,14 +133,17 @@ h6 {
 	[class*="--icon-arrow"]::before { 
 		content: "\f113"; 
 	} 
-	[class*="--icon-arrow-right"]::before { 
+	[class*="--icon-arrow-top"]::before { 
 		content: "\f114"; 
 	} 
-	[class*="--icon-arrow-left"]::before { 
+	[class*="--icon-arrow-right"]::before { 
 		content: "\f115"; 
 	} 
-	[class*="--icon-arrow-bottom"]::before { 
+	[class*="--icon-arrow-left"]::before { 
 		content: "\f116"; 
+	} 
+	[class*="--icon-arrow-bottom"]::before { 
+		content: "\f117"; 
 	} 
 
 
@@ -310,6 +313,29 @@ body {
 }
 .footer__menu {
   display: flex;
+}
+.footer #scrollUpBtn {
+  cursor: pointer;
+  position: fixed;
+  right: 3.125rem;
+  font-size: 1.25rem;
+  bottom: 3.125rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 0.375rem;
+  color: #fff;
+  background-color: #FF5A41;
+  z-index: 3;
+  display: none;
+  opacity: 0;
+  transition: opacity 0.4s ease;
+}
+.footer #scrollUpBtn.show {
+  display: block;
+  opacity: 1;
 }
 .menu-footer__item:not(:last-child) {
   margin-bottom: 1.5rem;
