--- a/watermark/css/dev/app.css
+++ b/watermark/css/dev/app.css
@@ -326,12 +326,13 @@ body {
   width: 2.5rem;
   height: 2.5rem;
   border-radius: 0.375rem;
+  border: 0.0625rem solid transparent;
   color: #fff;
   background-color: #FF5A41;
   z-index: 3;
   display: none;
   opacity: 0;
-  transition: opacity 0.4s ease;
+  transition: all 0.4s ease;
 }
 .footer #scrollUpBtn.show {
   display: block;
@@ -1000,6 +1001,11 @@ body {
   }
   .footer__logo:hover::before {
     background-color: #FF5A41;
+  }
+  .footer #scrollUpBtn:hover {
+    background-color: #fff;
+    color: #FF5A41;
+    border: 0.0625rem solid #D6D6D6;
   }
   .form-footer__item:hover {
     color: #FF5A41;
